--- a/index.html
+++ b/index.html
@@ -32,70 +32,76 @@
 			</hgroup>
 		</header>
 
-	<div class="container1">
-		<div class="block1-left ">
-			<h3 class="color">11/12/15</h3>
-			<h3>Camping by Loon lake</h3>
-			<img class="img1" src="travel_photo.jpeg">
-			<p>Clorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-			<p class="link">Continues..</p>
+		<div class="container1">
+			<div class="block1-left ">
+				<h3 class="color">11/12/15</h3>
+				<h3>Camping by Loon lake</h3>
+				<img class="img1" src="travel_photo.jpeg">
+				<p>Clorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+				<p class="link">Continues..</p>
+			</div>
+
+			
+			<div class="block2-left cf ">
+				<h3 class="color">11/12/15</h3>
+				<h3>A Morning Hike in Big Sur</h3>
+				<img class="img2" src="travel_photo2.jpeg">
+				<p>Slorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+				<p class="link">Continues..</p>
+			</div>
+			<div class="cf"></div>
 		</div>
 
-		
-		<div class="block2-left cf ">
-			<h3 class="color">11/12/15</h3>
-			<h3>A Morning Hike in Big Sur</h3>
-			<img class="img2" src="travel_photo2.jpeg">
-			<p>Slorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-			<p class="link">Continues..</p>
-		</div>
-		<div class="cf"></Ddiv>
-	</div>
+		<div class="container2">
+			<div class="block3-right">
+				<h3>About Us</h3>
+				<p>Slorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+				<p class="link">More..</p>
+			</div>
+			<p class="block4-right">Ad</p>
+			<p class="border"></p>
 
-	<div class="container2">
-		<div class="block3-right">
-			<h3>About Us</h3>
-			<p>Slorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-			<p class="link">More..</p>
-		</div>
-		<p class="block4-right">Ad</p>
-		<p class="border"></p>
-
-		<div class="block5-right">
-			<h3>Populer Posts</h3>
-				<ul>
-					<li>Breakfast in the Bay</li>
-					<li>Breakfast in the Bay</li>
-					<li>Breakfast in the Bay</li>
-					<li>Breakfast in the Bay</li>
-					<li>Breakfast in the Bay</li>
-					<li>Breakfast in the Bay</li>
-					<li>Breakfast in the Bay</li>
-				</ul>
+			<div class="block5-right">
+				<h3>Populer Posts</h3>
+					<ul>
+						<li>Breakfast in the Bay</li>
+						<li>Breakfast in the Bay</li>
+						<li>Breakfast in the Bay</li>
+						<li>Breakfast in the Bay</li>
+						<li>Breakfast in the Bay</li>
+						<li>Breakfast in the Bay</li>
+						<li>Breakfast in the Bay</li>
+					</ul>
+			</div>
 		</div>
 
-	</div>
-
-	<footer>
-		blog|events|snappshots|store|contact|About|Tips<br/>
-		&copy; 2015 Rugged Industries,Inc
-	</footer>
-
+		<footer class="cf">
+			<ul>
+				<li>blog</li>
+				<li>events</li>
+				<li>snappshots</li>
+				<li>store</li>
+				<li>contact</li>
+				<li>About</li>
+				<li>Tips</li>
+			</ul>
+			<p>&copy; 2015 Rugged Industries,Inc</p>
+		</footer>
 	</div>
 </body>
 </html>
